--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,24 @@
   src: url('./assets/novamono.ttf');
 }
 
+@font-face {
+  font-family: 'univers';
+  src: url('./assets/UniversLTStd.otf');
+}
+
 *{
 
-  font-family: 'novamono';
+  font-family: 'univers';
+  background-color: rgb(245 245 244);
 
 }
 
 .oring {
 
-  width: 650px;
-  height: 650px;
+  width: 1050px;
+  height: 1050px;
+  min-height: 900px;
+  min-width: 900px;
 
 }
 
@@ -23,10 +31,6 @@
 
 }
 
-.greenbar {
-
-  background-color: #DDEAD3;
-}
 
 #oring {
 
